Agent: move away from URI for parsing in order to recognize hosts with _ and -
Closes #337